Визуально различимы разные типы клеток